--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -14,13 +14,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#F7F7F7"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        android:paddingTop="20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"
+            android:paddingBottom="20dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +32,7 @@
                 android:id="@+id/empty_shopping"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="164dp"
+                android:layout_marginTop="100dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.25"
                 app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +44,6 @@
                 android:id="@+id/continue_shopping"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="164dp"
                 android:background="@drawable/checkout_shape"
                 android:fontFamily="@font/lato_bold"
                 android:insetTop="0dp"
@@ -53,10 +54,10 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:backgroundTint="#000000"
+                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.08"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/no_items"
                 app:layout_constraintWidth_percent="0.7" />
 
             <TextView
@@ -86,13 +87,20 @@
                 app:layout_constraintEnd_toEndOf="@+id/shopping_cart"
                 app:layout_constraintStart_toStartOf="@+id/shopping_cart"
                 app:layout_constraintTop_toBottomOf="@+id/shopping_cart" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="660dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewCart"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="@id/details"
             app:layout_constraintHeight_percent="0.45"
             app:layout_constraintStart_toStartOf="parent"
@@ -107,7 +115,7 @@
 
             android:layout_marginTop="16dp"
             android:background="#F7F7F7"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -122,7 +130,7 @@
                 android:textColor="#000000"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="@+id/discount_price"
-                app:layout_constraintStart_toStartOf="@+id/euro_cart"
+                app:layout_constraintEnd_toStartOf="@+id/discount_price"
                 app:layout_constraintTop_toTopOf="@+id/discount_price"
                 app:layout_constraintVertical_bias="1.0" />
 
@@ -202,20 +210,18 @@
                 android:textColor="#000000"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="@+id/discount"
-                app:layout_constraintStart_toStartOf="@+id/price_total" />
+                app:layout_constraintEnd_toEndOf="@+id/line" />
 
             <TextView
                 android:id="@+id/price_total"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="208dp"
-                android:layout_marginLeft="208dp"
                 android:fontFamily="@font/rubik_medium"
                 android:text="0"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="@+id/total_amount"
-                app:layout_constraintStart_toEndOf="@+id/total_amount" />
+                app:layout_constraintEnd_toEndOf="@+id/line" />
 
             <TextView
                 android:id="@+id/price_final"
@@ -226,7 +232,7 @@
                 android:textColor="#000000"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="@+id/final_amount"
-                app:layout_constraintStart_toStartOf="@+id/discount_price" />
+                app:layout_constraintEnd_toEndOf="@+id/line" />
 
             <TextView
                 android:id="@+id/euro_cart3"
@@ -237,7 +243,7 @@
                 android:textColor="#000000"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="@+id/price_final"
-                app:layout_constraintStart_toStartOf="@+id/euro_cart"
+                app:layout_constraintEnd_toStartOf="@+id/price_final"
                 app:layout_constraintTop_toTopOf="@+id/price_final"
                 app:layout_constraintVertical_bias="1.0" />
 
@@ -245,29 +251,24 @@
                 android:id="@+id/checkout"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/checkout_shape"
                 android:fontFamily="@font/rubik"
                 android:text="Checkout"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
                 app:backgroundTint="#000000"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.157"
                 app:layout_constraintHorizontal_bias="0.495"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
-                app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintWidth_percent="0.7" />
 
             <TextView
                 android:id="@+id/euro_cart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
                 android:fontFamily="@font/rubik_medium"
                 android:text="€"
                 android:textColor="#000000"
