--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,19 +63,18 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginStart="20dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="25dp"
-                    app:layout_constraintHeight_percent="0.11"
+                    app:layout_constraintHeight_percent="0.13"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/delivery"
-                    app:layout_constraintWidth_percent="0.09"
-                    app:srcCompat="@drawable/path_1395" />
+                    app:layout_constraintWidth_percent="0.11"
+                    app:srcCompat="@drawable/ic_baseline_email_24" />
 
                 <ImageView
                     android:id="@+id/delivery"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginTop="56dp"
+                    android:layout_marginTop="60dp"
                     app:layout_constraintHeight_percent="0.14"
                     app:layout_constraintStart_toStartOf="@+id/contact"
                     app:layout_constraintTop_toTopOf="parent"
@@ -122,10 +121,10 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="64dp"
+                    android:layout_marginBottom="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHeight_percent="0.2"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/contact"
                     app:layout_constraintWidth_percent="0.15"
                     app:srcCompat="@drawable/ideal_logo_black_and_white" />
 
