--- a/app/src/main/res/layout/fragment_airmax1.xml
+++ b/app/src/main/res/layout/fragment_airmax1.xml
@@ -30,14 +30,14 @@
             android:layout_width="match_parent"
             android:layout_height="700dp"
             android:layout_gravity="top"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
             android:fitsSystemWindows="false"
             android:layerType="software"
             android:orientation="vertical"
             android:outlineProvider="bounds"
             android:overScrollMode="never"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:visibility="visible"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
