--- a/app/src/main/res/layout/fragment_jordan.xml
+++ b/app/src/main/res/layout/fragment_jordan.xml
@@ -31,14 +31,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
                 android:fitsSystemWindows="false"
-                android:layerType="software"
 
+                android:layerType="software"
                 android:orientation="vertical"
                 android:overScrollMode="never"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:visibility="visible"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
