--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,154 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/scroll"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    android:backgroundTint="#FFFFFF"
-    android:paddingLeft="5dp"
-    android:paddingRight="10dp"
-    android:paddingBottom="@dimen/fragment_vertical_margin"
-    tools:context=".ui.account.login.LoginFragment">
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true">
 
-    <TextView
-        android:id="@+id/signup_action"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:fontFamily="@font/lato"
-        android:text="SIGN UP"
-        android:textColor="#000000"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/already"
-        app:layout_constraintStart_toEndOf="@+id/dont"
-        app:layout_constraintTop_toTopOf="@+id/dont" />
-
-    <TextView
-        android:id="@+id/mail_text_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="22dp"
-        android:fontFamily="@font/lato_bold"
-        android:text="Email"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toBottomOf="@+id/logo_log" />
-
-    <TextView
-        android:id="@+id/pass_text_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:fontFamily="@font/lato_bold"
-        android:text="Password"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/mail_text_login"
-        app:layout_constraintTop_toBottomOf="@+id/mail" />
-
-    <EditText
-        android:id="@+id/mail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="32dp"
-        android:fontFamily="@font/lato"
-        android:inputType="textEmailAddress"
-        android:singleLine="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.875"
-        app:layout_constraintStart_toEndOf="@+id/email_logo"
-        app:layout_constraintTop_toBottomOf="@+id/mail_text_login" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="@+id/mail"
-        app:layout_constraintStart_toEndOf="@+id/logo_password"
-        app:layout_constraintTop_toBottomOf="@+id/pass_text_login" />
-
-
-    <ImageView
-        android:id="@+id/logo_password"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="16dp"
-        android:src="@drawable/pass"
-        app:layout_constraintBottom_toBottomOf="@+id/password"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/password"
-        app:layout_constraintVertical_bias="0.64"
-        tools:srcCompat="@drawable/pass" />
-
-    <ImageView
-        android:id="@+id/logo_log"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.44"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_big2" />
-
-    <ImageView
-        android:id="@+id/email_logo"
-        android:layout_width="25dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:background="#00000000"
-        app:layout_constraintBottom_toBottomOf="@+id/mail"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/mail"
-        app:layout_constraintVertical_bias="0.64"
-        app:srcCompat="@drawable/email" />
-
-    <TextView
-        android:id="@+id/dont"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
-        android:text="DON’T HAVE AN ACCOUNT YET? "
-
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/loginB"
-        app:layout_constraintTop_toBottomOf="@+id/loginB" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85" />
+        android:background="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
+        android:paddingStart="5dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="20dp"
+        tools:context=".ui.account.login.LoginFragment">
 
-    <Button
-        android:id="@+id/loginB"
-        android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:layout_gravity="start"
-        android:layout_marginTop="68dp"
-        android:background="@drawable/checkout_shape"
-        android:clickable="true"
-        android:enabled="true"
-        android:focusable="true"
-        android:fontFamily="@font/lato"
-        android:text="LOG IN"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        app:backgroundTint="#000000"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/logo_password"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        <TextView
+            android:id="@+id/signup_action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:fontFamily="@font/lato"
+            android:text="@string/sign_up"
+            android:textColor="#000000"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/already"
+            app:layout_constraintStart_toEndOf="@+id/dont"
+            app:layout_constraintTop_toTopOf="@+id/dont" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/mail_text_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="22dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="@string/email"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="@+id/password"
+            app:layout_constraintTop_toBottomOf="@+id/logo_log" />
+
+        <TextView
+            android:id="@+id/pass_text_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:fontFamily="@font/lato_bold"
+            android:text="Password"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="@+id/mail_text_login"
+            app:layout_constraintTop_toBottomOf="@+id/mail" />
+
+        <EditText
+            android:id="@+id/mail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="32dp"
+            android:fontFamily="@font/lato"
+            android:inputType="textEmailAddress"
+            android:singleLine="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.875"
+            app:layout_constraintStart_toEndOf="@+id/email_logo"
+            app:layout_constraintTop_toBottomOf="@+id/mail_text_login" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:imeActionLabel="@string/action_sign_in_short"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:selectAllOnFocus="true"
+            app:layout_constraintEnd_toEndOf="@+id/mail"
+            app:layout_constraintStart_toEndOf="@+id/logo_password"
+            app:layout_constraintTop_toBottomOf="@+id/pass_text_login" />
+
+
+        <ImageView
+            android:id="@+id/logo_password"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/pass"
+            app:layout_constraintBottom_toBottomOf="@+id/password"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/password"
+            app:layout_constraintVertical_bias="0.64"
+            tools:srcCompat="@drawable/pass" />
+
+        <ImageView
+            android:id="@+id/logo_log"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.44"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logo_big2" />
+
+        <ImageView
+            android:id="@+id/email_logo"
+            android:layout_width="25dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:background="#00000000"
+            app:layout_constraintBottom_toBottomOf="@+id/mail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/mail"
+            app:layout_constraintVertical_bias="0.64"
+            app:srcCompat="@drawable/email" />
+
+        <TextView
+            android:id="@+id/dont"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="20dp"
+            android:text="DON’T HAVE AN ACCOUNT YET? "
+
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/loginB"
+            app:layout_constraintTop_toBottomOf="@+id/loginB" />
+
+        <Button
+            android:id="@+id/loginB"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_gravity="start"
+            android:layout_marginTop="68dp"
+            android:background="@drawable/checkout_shape"
+            android:clickable="true"
+            android:enabled="true"
+            android:focusable="true"
+            android:fontFamily="@font/lato"
+            android:text="@string/log_in"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            app:backgroundTint="#000000"
+            app:layout_constraintEnd_toEndOf="@+id/password"
+            app:layout_constraintStart_toStartOf="@+id/logo_password"
+            app:layout_constraintTop_toBottomOf="@+id/password" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
