--- a/app/src/main/res/layout/fragment_request_sneaker.xml
+++ b/app/src/main/res/layout/fragment_request_sneaker.xml
@@ -92,7 +92,7 @@
             android:fontFamily="@font/liberation_sans"
             android:gravity="start|top"
 
-            android:inputType="number"
+            android:inputType="text"
             android:padding="10dp"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/brand_name_section"
@@ -111,7 +111,7 @@
             android:ems="10"
             android:fontFamily="@font/liberation_sans"
             android:gravity="start|top"
-            android:inputType="number"
+            android:inputType="text"
             android:padding="10dp"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="@+id/name_text"
@@ -198,7 +198,7 @@
             android:ems="10"
             android:fontFamily="@font/liberation_sans"
             android:gravity="start|top"
-            android:inputType="number"
+            android:inputType="text"
             android:padding="10dp"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="@+id/name_text"
@@ -229,7 +229,7 @@
             android:ems="10"
             android:fontFamily="@font/liberation_sans"
             android:gravity="start|top"
-            android:inputType="number"
+            android:inputType="text"
 
             android:padding="10dp"
             android:textSize="20sp"
