--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,49 +1,47 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    >
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="0dp"
-        android:background="#FFFFFF">
+        android:layout_height="wrap_content"
+        android:fillViewport="true">
 
-        <ImageView
-            android:id="@id/search_logo"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginRight="30dp"
-            android:contentDescription="TODO"
-            android:src="@drawable/search"
-            app:layout_constraintBottom_toBottomOf="@+id/searchView"
-            app:layout_constraintEnd_toEndOf="@+id/searchView"
-            app:layout_constraintTop_toTopOf="@+id/searchView"
-            app:srcCompat="@drawable/ic_baseline_search_24" />
-
-        <SearchView
-            android:id="@+id/searchView"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/search_back"
-            android:textCursorDrawable="@null"
-            android:visibility="visible"
-            app:iconifiedByDefault="true"
+            android:layout_marginTop="0dp"
+            android:background="#FFFFFF">
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/recyclerViewSearch"
-            app:layout_constraintTop_toTopOf="parent"
-            app:queryBackground="@null" />
+            <SearchView
+                android:id="@+id/searchView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="24dp"
+                android:background="@drawable/fill_text_back"
+                android:gravity="end"
+                android:iconifiedByDefault="false"
+                android:queryHint="Search Products"
+                android:textCursorDrawable="@null"
+                android:visibility="visible"
+                app:iconifiedByDefault="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/recyclerViewSearch"
+                app:layout_constraintTop_toTopOf="parent"
+                app:queryBackground="@null" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
             android:layout_gravity="top"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
+            android:padding="10dp"
             android:layout_marginTop="20dp"
             android:fitsSystemWindows="false"
             android:foregroundGravity="top"
@@ -60,9 +58,37 @@
             app:layout_constraintHeight_percent="0"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchView"
+            app:layout_constraintTop_toBottomOf="@+id/count"
             app:spanCount="2"
             tools:itemCount="4"
             tools:listitem="@layout/card_jordan" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/shop_products"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/liberation_sans"
+                android:text="Shop Products"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/searchView"
+                app:layout_constraintStart_toStartOf="@+id/searchView"
+                app:layout_constraintTop_toBottomOf="@+id/searchView" />
+
+            <TextView
+                android:id="@+id/count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/liberation_sans"
+                android:text="1080 items"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="@+id/shop_products"
+                app:layout_constraintHorizontal_bias="0.525"
+                app:layout_constraintStart_toStartOf="@+id/shop_products"
+                app:layout_constraintTop_toBottomOf="@+id/shop_products" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
