--- a/app/src/main/res/layout/fragment_wishlist.xml
+++ b/app/src/main/res/layout/fragment_wishlist.xml
@@ -19,7 +19,7 @@
             android:id="@+id/empty_wishlist"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="60dp"
+            android:paddingBottom="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
                 android:id="@+id/continue_shopping2"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="144dp"
+                android:layout_marginTop="150dp"
                 android:background="@drawable/checkout_shape"
                 android:fontFamily="@font/lato_bold"
                 android:insetTop="0dp"
@@ -101,6 +101,14 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_percent="0.5"
                 app:srcCompat="@drawable/empty_wish" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.98" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
@@ -139,6 +147,7 @@
             app:spanCount="2"
             tools:itemCount="4"
             tools:listitem="@layout/card_jordan" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
