update- Home Screen Long Click, Layout Fixing

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -214,14 +214,14 @@
 
             <TextView
                 android:id="@+id/price_total"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/rubik_medium"
                 android:text="0"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="@+id/total_amount"
-                app:layout_constraintEnd_toEndOf="@+id/line" />
+                app:layout_constraintEnd_toEndOf="@+id/discount_price" />
 
             <TextView
                 android:id="@+id/price_final"
