--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -150,10 +150,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
             android:fontFamily="@font/lato"
             android:text="LOG IN"
-            android:textColor="#000000"
+            android:textColor="#FF5C5C"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/already"
             app:layout_constraintStart_toEndOf="@+id/already"
