--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="alert">#292C2F</color>
     <color name="colorPrimary">#FFFF</color>
     <color name="item_color">#95989A</color>
+    <color name="newcolor">#FF5C5C</color>
 </resources>
