--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,8 @@
         android:layout_marginTop="85dp"
         android:fitsSystemWindows="false"
         android:overScrollMode="never"
-        android:scrollbarSize="4dp"
         android:paddingTop="20dp"
+        android:scrollbarSize="4dp"
         app:headerLayout="@layout/nav_header"
         app:itemIconPadding="15dp"
         app:itemTextAppearance="@drawable/nav_view_select_text"
@@ -64,10 +64,10 @@
                     android:layout_height="0dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="25dp"
-                    app:layout_constraintHeight_percent="0.13"
+                    app:layout_constraintHeight_percent="0.14"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/delivery"
-                    app:layout_constraintWidth_percent="0.11"
+                    app:layout_constraintWidth_percent="0.13"
                     app:srcCompat="@drawable/ic_baseline_email_24" />
 
                 <ImageView
@@ -75,10 +75,11 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginTop="60dp"
-                    app:layout_constraintHeight_percent="0.14"
+                    app:layout_constraintEnd_toEndOf="@+id/contact"
+                    app:layout_constraintHeight_percent="0.13"
                     app:layout_constraintStart_toStartOf="@+id/contact"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.12"
+                    app:layout_constraintWidth_percent="0.11"
                     app:srcCompat="@drawable/delivery" />
 
                 <TextView
