--- a/app/src/main/res/layout/fragment_info_orders.xml
+++ b/app/src/main/res/layout/fragment_info_orders.xml
@@ -31,13 +31,15 @@
         android:id="@+id/imageView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
+        android:padding="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.65"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_big" />
+        app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/account_name"
@@ -47,7 +49,7 @@
         android:layout_marginTop="60dp"
         android:fontFamily="@font/liberation_sans"
         android:text="Your Name"
-        android:textColor="#000000"
+        android:textColor="#FF5C5C"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
