--- a/app/src/main/res/layout/fragment_menu_login.xml
+++ b/app/src/main/res/layout/fragment_menu_login.xml
@@ -47,8 +47,13 @@
     <ImageView
         android:id="@+id/logo_menu"
         android:layout_width="match_parent"
+
         android:layout_height="0dp"
-        android:src="@drawable/logo3"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginBottom="60dp"
+        android:src="@drawable/logo"
         app:layout_constraintBottom_toTopOf="@+id/signup_option"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
