--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,19 +1,137 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="false"
         android:fillViewport="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
             android:layout_marginTop="0dp"
             android:background="#FFFFFF">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/categories"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/count">
+
+                <TextView
+                    android:id="@+id/new_in"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:fontFamily="@font/liberation_sans"
+                    android:text="NEW IN"
+                    android:textColor="#FF7777"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/jordan_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:fontFamily="@font/liberation_sans"
+                    android:text="Jordan 1"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="@+id/new_in"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/new_in"
+                    app:layout_constraintTop_toBottomOf="@+id/new_in" />
+
+                <TextView
+                    android:id="@+id/airmax_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:fontFamily="@font/liberation_sans"
+                    android:text="Air max 1"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="@+id/jordan_1"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/jordan_1"
+                    app:layout_constraintTop_toBottomOf="@+id/jordan_1" />
+
+                <TextView
+                    android:id="@+id/airmax_90"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:fontFamily="@font/liberation_sans"
+                    android:text="Air max 90"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="@+id/airmax_1"
+                    app:layout_constraintStart_toStartOf="@+id/airmax_1"
+                    app:layout_constraintTop_toBottomOf="@+id/airmax_1" />
+
+                <TextView
+                    android:id="@+id/sb_dunk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:fontFamily="@font/liberation_sans"
+                    android:text="Sb Dunk"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="@+id/airmax_90"
+                    app:layout_constraintStart_toStartOf="@+id/airmax_90"
+                    app:layout_constraintTop_toBottomOf="@+id/airmax_90" />
+
+                <TextView
+                    android:id="@+id/dunk_low"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:fontFamily="@font/liberation_sans"
+                    android:text=" Dunk low Disrupt"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="@+id/sb_dunk"
+                    app:layout_constraintStart_toStartOf="@+id/sb_dunk"
+                    app:layout_constraintTop_toBottomOf="@+id/sb_dunk" />
+
+                <TextView
+                    android:id="@+id/jordan_mid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:fontFamily="@font/liberation_sans"
+                    android:text="Jordan 1 MID"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="@+id/dunk_low"
+                    app:layout_constraintStart_toStartOf="@+id/dunk_low"
+                    app:layout_constraintTop_toBottomOf="@+id/dunk_low" />
+
+                <TextView
+                    android:id="@+id/sale_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:fontFamily="@font/liberation_sans"
+                    android:text="Sale%"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="@+id/jordan_mid"
+                    app:layout_constraintStart_toStartOf="@+id/jordan_mid"
+                    app:layout_constraintTop_toBottomOf="@+id/jordan_mid" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <SearchView
                 android:id="@+id/searchView"
@@ -33,27 +151,27 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/recyclerViewSearch"
                 app:layout_constraintTop_toTopOf="parent"
-                app:queryBackground="@null" />
+                app:queryBackground="@null">
+
+            </SearchView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewSearch"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="700dp"
             android:layout_marginStart="0dp"
             android:layout_gravity="top"
-            android:padding="10dp"
+            android:padding="0dp"
             android:layout_marginTop="20dp"
             android:fitsSystemWindows="false"
             android:foregroundGravity="top"
             android:layerType="software"
-            android:nestedScrollingEnabled="false"
             android:orientation="vertical"
             android:overScrollMode="always"
-            android:paddingBottom="150dp"
+            android:paddingBottom="0dp"
             android:scrollbars="vertical"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0"
             app:layout_constraintHorizontal_bias="0.0"
@@ -73,8 +191,8 @@
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/searchView"
-                app:layout_constraintStart_toStartOf="@+id/searchView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
             <TextView
@@ -83,12 +201,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/liberation_sans"
-                android:text="1080 items"
+                android:text="@string/_1080_items"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@+id/shop_products"
-                app:layout_constraintHorizontal_bias="0.525"
                 app:layout_constraintStart_toStartOf="@+id/shop_products"
                 app:layout_constraintTop_toBottomOf="@+id/shop_products" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
